# linux-smart-photos

./: .gitignore  LICENSE  README.md  config.example.json  main.py  pyproject.toml  setup-smart-photos  smart-photos
.github/workflows/: build-appimage.yml
electron/: main.js  package.json  preload.js
electron/renderer/: app.js  index.html  styles.css
packaging/: README.md  build-appimage.sh
packaging/appimage/: AppRun  smart-photos.desktop
packaging/pyinstaller/: smart-photos.spec
src/linux_smart_photos/: __init__.py  app.py  bootstrap.py  branding.py  cli.py  config.py  launcher.py  media.py  migration.py  models.py  store.py  web_api.py
src/linux_smart_photos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/linux_smart_photos/services/: human_face_backend.py  library.py  model_manager.py  vision.py
src/linux_smart_photos/ui/: dialogs.py  main_window.py  theme.py  widgets.py
tauri/: package.json
tauri/renderer/: app.js  index.html  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
